# cmake_win32_build

./: CMakeLists.txt  conanfile.txt  requirements.txt
.github/actions/: build_cmake.yml
.github/workflows/: build_cmake.yml
libs/: CMakeLists.txt
libs/dbgcam/: CMakeLists.txt
libs/dbgcam/src/: dbgcam.cpp
libs/pvcam/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/basecam/include/: basecam.h
src/sub1/: CMakeLists.txt
src/sub1/include/sub1/: sub1.h
src/sub1/src/: sub1.cpp
