add_library(pvcam INTERFACE)

target_include_directories(pvcam
    INTERFACE include)

# install(TARGETS pvcam
#     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/
#     RUNTIME DESTINATION       ${CMAKE_INSTALL_BINDIR}
#     LIBRARY DESTINATION       ${CMAKE_INSTALL_LIBDIR}
#     INCLUDES DESTINATION      ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/
#     ARCHIVE DESTINATION       ${CMAKE_INSTALL_SHAREDSTATEDIR})
